Added redirect after login and component name from handler in my list

--- a/app/assets/stylesheets/biovision/themes/default_theme/components/users.scss
+++ b/app/assets/stylesheets/biovision/themes/default_theme/components/users.scss
@@ -1,2 +1,3 @@
 @import "biovision/themes/default_theme/components/users/form_tabs";
 @import "biovision/themes/default_theme/components/users/profile";
+@import "biovision/themes/default_theme/components/users/dashboard";
