--- a/app/views/my/index/index.html.erb
+++ b/app/views/my/index/index.html.erb
@@ -45,8 +45,8 @@
     <% handler = Biovision::Components::BaseComponent.handler(component, current_user) %>
     <% next unless handler&.permit?('default') %>
     <% if lookup_context.exists?("#{prefix}_#{component.slug}") %>
-      <section>
-        <h2><%= component.name %></h2>
+      <section class="my__component">
+        <h2><%= handler.name %></h2>
         <%=
           render(
             partial: "#{prefix}#{component.slug}",
