--- a/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
+++ b/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
@@ -1,9 +1,9 @@
 <div class="data">
-  <div><%= admin_entity_link(entity) %></div>
+  <div><%= admin_entity_link(entity, handler: local_assigns[:handler]) %></div>
 
   <%= render(partial: 'shared/admin/toggle', locals: { entity: entity }) %>
 
-  <% if local_assigns[:handler] && handler.permit?('edit', entity) %>
+  <% if local_assigns[:handler]&.permit?('edit', entity) %>
     <div class="entity-actions">
       <%= edit_icon(entity) %>
       <%= destroy_icon(entity) %>
