--- a/app/views/admin/dynamic_pages/entity/_in_search.html.erb
+++ b/app/views/admin/dynamic_pages/entity/_in_search.html.erb
@@ -1,6 +1,6 @@
 <figure class="image"><%= simple_image_preview(entity) %></figure>
 <div class="data">
-  <div><%= admin_entity_link(entity) %></div>
+  <div><%= admin_entity_link(entity, handler: local_assigns[:handler]) %></div>
   <% unless entity.name.blank? %>
     <div class="info"><%= entity.name %></div>
   <% end %>
