--- a/app/views/admin/navigation_group_pages/entity/_in_list.html.erb
+++ b/app/views/admin/navigation_group_pages/entity/_in_list.html.erb
@@ -1,9 +1,9 @@
 <div class="data">
-  <div><%= admin_entity_link(entity.dynamic_page) %></div>
+  <div><%= admin_entity_link(entity.dynamic_page, handler: local_assigns[:handler]) %></div>
   <div class="info"><%= entity.dynamic_page.url %></div>
   <div class="secondary info"><%= entity.dynamic_page.name %></div>
 
-  <% if local_assigns[:handler] && handler.permit?('edit', entity.navigation_group) %>
+  <% if local_assigns[:handler]&.permit?('edit', entity.navigation_group) %>
     <div class="entity-actions">
       <% url = page_priority_admin_navigation_group_path(id: entity.navigation_group_id, page_id: entity.id) %>
       <div class="priority-changer" data-url="<%= url %>">
