--- a/app/views/admin/tokens/entity/_in_list.html.erb
+++ b/app/views/admin/tokens/entity/_in_list.html.erb
@@ -1,6 +1,6 @@
 <figure class="image"><%= simple_image_preview(entity.user) %></figure>
 <div class="data">
-  <div><%= admin_entity_link(entity) %></div>
+  <div><%= admin_entity_link(entity, handler: local_assigns[:handler]) %></div>
   <div class="info">
     <% unless entity.last_used.nil? %>
       <div>
@@ -18,7 +18,7 @@
 
   <%= render(partial: 'shared/admin/toggle', locals: { entity: entity }) %>
 
-  <% if local_assigns[:handler] && handler.permit?('edit', entity) %>
+  <% if local_assigns[:handler]&.permit?('edit', entity) %>
     <div class="entity-actions">
       <%= edit_icon(entity) %>
       <%= destroy_icon(entity) %>
