--- a/app/views/shared/entity/_parent.html.erb
+++ b/app/views/shared/entity/_parent.html.erb
@@ -1,6 +1,6 @@
 <% unless entity.parent.blank? %>
   <div>
     <dt><%= entity.class.human_attribute_name(:parent) %></dt>
-    <dd><%= admin_entity_link(entity.parent) %></dd>
+    <dd><%= admin_entity_link(entity.parent, handler: local_assigns[:handler]) %></dd>
   </div>
 <% end %>
