--- a/app/views/shared/entity/edit.html.erb
+++ b/app/views/shared/entity/edit.html.erb
@@ -6,7 +6,7 @@
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
   <%= link_to(t("#{prefix}.nav_item.text"), "/#{controller_path}") %>
-  <%= admin_entity_link(@entity) %>
+  <%= admin_entity_link(@entity, handler: component_handler) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
