Added margin after breadcrumbs

--- a/app/assets/stylesheets/biovision/admin/layout.scss
+++ b/app/assets/stylesheets/biovision/admin/layout.scss
@@ -73,4 +73,8 @@ h2 {
   padding: var(--spacer-xs);
 }
 
+.breadcrumbs {
+  margin-bottom: var(--spacer-s);
+}
+
 @import "biovision/admin/components";
