--- a/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
+++ b/app/views/admin/dynamic_blocks/entity/_in_list.html.erb
@@ -1,7 +1,7 @@
 <div class="data">
   <div><%= admin_entity_link(entity, handler: local_assigns[:handler]) %></div>
 
-  <%= render(partial: 'shared/admin/toggle', locals: { entity: entity }) %>
+  <%= admin_toggle_block(entity) %>
 
   <% if local_assigns[:handler]&.permit?('edit', entity) %>
     <div class="entity-actions">
