--- a/app/views/admin/tokens/show.html.erb
+++ b/app/views/admin/tokens/show.html.erb
@@ -22,5 +22,5 @@
     <%= render partial: 'shared/entity/track', locals: { entity: @entity } %>
   </dl>
 
-  <%= render(partial: 'shared/admin/toggle', locals: { entity: @entity }) %>
+  <%= admin_toggle_block(@entity) %>
 </article>
