--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -42,12 +42,7 @@
 
   <%= render partial: 'admin/users/entity/fields', locals: { entity: @entity } %>
 
-  <%=
-    render(
-      partial: 'shared/admin/toggle',
-      locals: { entity: @entity }
-    )
-  %>
+  <%= admin_toggle_block(@entity) %>
 
   <% prefix = 'admin/users/entity/components/' %>
   <% BiovisionComponent.list_for_administration.each do |component| %>
