Managing biovision components

--- a/app/views/admin/index/index.html.erb
+++ b/app/views/admin/index/index.html.erb
@@ -8,7 +8,7 @@
       render(
         partial: 'admin/components/list',
         locals: {
-          collection: BiovisionComponent.list_for_administration
+          collection: BiovisionComponent.active.list_for_administration
         }
       )
     %>
