--- a/app/views/shared/entity/_date_field.html.erb
+++ b/app/views/shared/entity/_date_field.html.erb
@@ -1,6 +1,6 @@
 <% unless entity.attributes[field.to_s].blank? %>
   <div>
     <dt><%= entity.class.human_attribute_name(field) %></dt>
-    <dd><%= time_tag(entity.attributes[field]) %></dd>
+    <dd><%= time_tag(entity.attributes[field.to_s]) %></dd>
   </div>
 <% end %>
