--- a/app/views/shared/forms/_meta_texts.html.erb
+++ b/app/views/shared/forms/_meta_texts.html.erb
@@ -2,7 +2,7 @@
 <div>
   <dt><%= t('.name') %></dt>
   <dd>
-    <ul class="flags">
+    <ul class="meta-texts">
       <% entity.class.meta_keys.each do |key| %>
         <li>
           <label class="floating-label" title="<%= key %>">
