--- a/app/views/shared/forms/_simple_entity_link.html.erb
+++ b/app/views/shared/forms/_simple_entity_link.html.erb
@@ -1,11 +1,13 @@
+<% preset = local_assigns[:blank] ? [[t(:not_set), '']] : [] %>
 <div>
   <dt><%= f.label(field) %></dt>
   <dd>
     <%=
       f.select(
         field,
-        linked_model.list_for_administration.map { |e| [e.text_for_link, e.id ]},
-        class: 'input-select'
+        preset + linked_model.list_for_administration.map { |e| [e.text_for_link, e.id ]},
+        class: 'input-select',
+        required: local_assigns[:required]
       )
     %>
   </dd>
