--- a/app/views/shared/entity/_linked_entity.html.erb
+++ b/app/views/shared/entity/_linked_entity.html.erb
@@ -1,6 +1,6 @@
 <% unless entity.nil? %>
   <div>
-    <dt><%= entity.class.model_name.human %></dt>
+    <dt><%= local_assigns[:text] || entity.class.model_name.human %></dt>
     <dd><%= admin_entity_link(entity, handler: local_assigns[:handler]) %></dd>
   </div>
 <% end %>
