--- a/app/views/admin/tokens/show.html.erb
+++ b/app/views/admin/tokens/show.html.erb
@@ -22,5 +22,5 @@
     <%= render partial: 'shared/entity/track', locals: { entity: @entity } %>
   </dl>
 
-  <%= admin_toggle_block(@entity) %>
+  <%= entity_toggle(@entity) %>
 </article>
