--- a/app/views/admin/users/entity/_in_list.html.erb
+++ b/app/views/admin/users/entity/_in_list.html.erb
@@ -29,7 +29,7 @@
     )
   %>
 
-  <%= admin_toggle_block(entity) %>
+  <%= entity_toggle(entity) %>
 
   <div class="entity-actions">
     <%= edit_icon(entity) if local_assigns[:handler]&.permit?('edit', entity) %>
