--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -20,5 +20,5 @@
     )
   %>
 
-  <%= render partial: 'shared/admin/list', locals: { collection: @collection, handler: component_handler } %>
+  <%= entity_list(@collection) %>
 </article>
