--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -7,5 +7,5 @@
 <article>
   <h1><%= t('.heading') %></h1>
   
-  <%= render partial: 'shared/admin/list', locals: { collection: @collection } %>
+  <%= entity_list(@collection) %>
 </article>
