--- a/app/views/admin/biovision_components/entity/_in_list.html.erb
+++ b/app/views/admin/biovision_components/entity/_in_list.html.erb
@@ -3,10 +3,10 @@
   <div class="info"><%= entity.slug %></div>
 
   <% if local_assigns[:handler]&.permit?('edit', entity) %>
-    <%= admin_toggle_block(entity) %>
+    <%= entity_toggle(entity) %>
 
     <div class="entity-actions">
-      <%= admin_priority_icons(entity) %>
+      <%= entity_priority_icons(entity) %>
     </div>
   <% end %>
 </div>
