--- a/app/views/admin/dynamic_blocks/show.html.erb
+++ b/app/views/admin/dynamic_blocks/show.html.erb
@@ -21,5 +21,5 @@
     <%= entity_partial_block(@entity, :timestamps) %>
   </dl>
 
-  <%= admin_toggle_block(@entity) %>
+  <%= entity_toggle(@entity) %>
 </article>
