--- a/app/views/admin/dynamic_pages/show.html.erb
+++ b/app/views/admin/dynamic_pages/show.html.erb
@@ -24,5 +24,5 @@
     <%= render partial: 'shared/entity/timestamps', locals: { entity: @entity } %>
   </dl>
 
-  <%= admin_toggle_block(@entity) %>
+  <%= entity_toggle(@entity) %>
 </article>
