--- a/app/views/admin/tokens/index.html.erb
+++ b/app/views/admin/tokens/index.html.erb
@@ -7,10 +7,5 @@
 <article>
   <h1><%= t('.heading') %></h1>
 
-  <%=
-    render(
-      partial: 'shared/admin/list',
-      locals: { collection: @collection, handler: component_handler }
-    )
-  %>
+  <%= entity_list(@collection) %>
 </article>
