--- a/app/views/shared/admin/_toggle.html.erb
+++ b/app/views/shared/admin/_toggle.html.erb
@@ -1,11 +1,6 @@
-<%
-  model = entity.class
-  url = "/admin/#{model.table_name}/#{entity.id}/toggle"
+<%=
+  render(
+    partial: 'shared/entity/toggle',
+    locals: { entity: entity, scope: :admin }
+  )
 %>
-<div class="toggleable" data-url="<%= url %>">
-  <% model.toggleable_attributes.each do |flag| %>
-  <span class="<%= entity.attributes[flag.to_s] ? 'active' : 'inactive' %>" data-flag="<%= flag %>">
-    <%= model.human_attribute_name(flag) %>
-  </span>
-  <% end %>
-</div>
