--- a/app/views/shared/my/_list.html.erb
+++ b/app/views/shared/my/_list.html.erb
@@ -1,19 +1,10 @@
-<% use_pagination = collection.respond_to?(:current_page) %>
-<%= paginate collection if use_pagination %>
-<% if collection.any? %>
-  <ul class="list-of-entities">
-    <% collection.each do |entity| %>
-      <li data-id="<%= entity.id %>">
-        <%=
-          render(
-              partial: "my/#{entity.class.table_name}/entity/in_list",
-              locals: { entity: entity, handler: local_assigns[:handler] }
-          )
-        %>
-      </li>
-    <% end %>
-  </ul>
-  <%= paginate collection if use_pagination %>
-<% else %>
-  <%= render 'shared/nothing_found' %>
-<% end %>
+<%=
+  render(
+    partial: 'shared/entity/list',
+    locals: {
+      collection: collection,
+      handler: local_assigns[:handler],
+      scope: :my
+    }
+  )
+%>
