Using inline-block for text in searchable list

--- a/app/assets/stylesheets/biovision/components/forms.scss
+++ b/app/assets/stylesheets/biovision/components/forms.scss
@@ -282,7 +282,11 @@ form {
     list-style: none;
   }
 
-  .text:empty {
-    display: none;
+  .text {
+    display: inline-block;
+
+    &:empty {
+      display: none;
+    }
   }
 }
