Changed imports in application and layout

--- a/sample/app/assets/stylesheets/application.scss
+++ b/sample/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "application/fonts";
 @import "shared";
 @import "biovision/biovision";
+@import "application/vars";
 @import "application/layout";
+@import "application/components";
