--- a/app/assets/stylesheets/biovision/components/carousel.scss
+++ b/app/assets/stylesheets/biovision/components/carousel.scss
@@ -1,37 +1,37 @@
 .js-biovision-carousel {
   position: relative;
+}
 
-  > button {
-    -webkit-backdrop-filter: blur(.5rem) grayscale(.75);
-    backdrop-filter: blur(.5rem) grayscale(.75);
-    background: rgba(255, 255, 255, .5) no-repeat center / auto 1.6rem;
-    border: none;
-    border-radius: 50%;
-    box-shadow: 0 0 .4rem rgba(0, 0, 0, .25);
-    cursor: pointer;
-    display: inline-block;
-    height: 3.2rem;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    transition: .25s;
-    width: 3.2rem;
-    z-index: 4;
+.carousel-button {
+  -webkit-backdrop-filter: blur(.5rem) grayscale(.75);
+  backdrop-filter: blur(.5rem) grayscale(.75);
+  background: rgba(255, 255, 255, .5) no-repeat center / auto 1.6rem;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 .4rem rgba(0, 0, 0, .25);
+  cursor: pointer;
+  display: inline-block;
+  height: 3.2rem;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  transition: .25s;
+  width: 3.2rem;
+  z-index: 4;
 
-    &:active,
-    &:focus,
-    &:hover {
-      background-color: rgba(255, 255, 255, .75);
-      box-shadow: 0 0 .4rem rgba(0, 0, 0, .75);
-    }
+  &:active,
+  &:focus,
+  &:hover {
+    background-color: rgba(255, 255, 255, .75);
+    box-shadow: 0 0 .4rem rgba(0, 0, 0, .75);
   }
 
-  .prev {
+  &.prev {
     background-image: image_url('biovision/components/carousel/arrow-left.svg');
     left: var(--spacer-xxs);
   }
 
-  .next {
+  &.next {
     background-image: image_url('biovision/components/carousel/arrow-right.svg');
     right: var(--spacer-xxs);
   }
