--- a/app/views/my/index/index.html.erb
+++ b/app/views/my/index/index.html.erb
@@ -3,10 +3,12 @@
   <span><%= t('.nav_text') %></span>
 <% end %>
 
-<article class="content-wrapper">
-  <h1><%= t('.heading') %></h1>
+<article>
+  <div class="content-wrapper">
+    <h1><%= t('.heading') %></h1>
 
-  <%= render partial: 'my/index/email', locals: { handler: component_handler } %>
-  <%= render 'my/index/navigation' %>
-  <%= render 'my/index/cards' %>
+    <%= render partial: 'my/index/email', locals: { handler: component_handler } %>
+    <%= render 'my/index/navigation' %>
+    <%= render 'my/index/cards' %>
+  </div>
 </article>
