--- a/app/views/shared/entity/edit.html.erb
+++ b/app/views/shared/entity/edit.html.erb
@@ -11,13 +11,15 @@
 <% end %>
 
 <article>
-  <h1><%= t("#{prefix}.edit.heading", default: default_title) %></h1>
+  <div class="content-wrapper">
+    <h1><%= t("#{prefix}.edit.heading", default: default_title) %></h1>
 
-  <% if component_handler.permit?('edit', @entity) %>
-    <nav class="entity-actions">
-      <%= destroy_icon(@entity) %>
-    </nav>
-  <% end %>
+    <% if component_handler.permit?('edit', @entity) %>
+      <nav class="entity-actions">
+        <%= destroy_icon(@entity) %>
+      </nav>
+    <% end %>
 
-  <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
+    <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
+  </div>
 </article>
