--- a/app/views/shared/entity/new.html.erb
+++ b/app/views/shared/entity/new.html.erb
@@ -10,7 +10,9 @@
 <% end %>
 
 <article>
-  <h1><%= t("#{prefix}.new.heading", default: default_title) %></h1>
+  <div class="content-wrapper">
+    <h1><%= t("#{prefix}.new.heading", default: default_title) %></h1>
 
-  <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
+    <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
+  </div>
 </article>
