Improved feedback request mailers

--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -13,7 +13,8 @@
     html: {
       id: form_id,
       class: form_class
-    }
+    },
+    local: false
   ) do |f|
 %>
   <div class="state-1">
